Config bases for project

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=clean-architecture;UserName=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;"
   },
   "Serilog": {
     "Using": [
