--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -1,12 +1,32 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Database": ""
+    "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.Seq"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "ServerUrl": "http://seq:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "Jwt": {
-    "Secret": "",
-    "Issuer": "",
-    "Audience": "",
-    "ExpirationInMinutes": 0
+    "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
+    "Issuer": "petopia",
+    "Audience": "customer",
+    "ExpirationInMinutes": 60
   }
 }
