--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,7 +49,7 @@ jobs:
           if [ ! -d ${{ env.PATH_TO_PROJECT }}/.git ]; then
             git clone git@github.com:ddnhuy/Petopia_BackEnd.git ${{ env.PATH_TO_PROJECT }}
           fi
-          cd ${{ env.PATH_TO_PROJECT }} && git checkout main && git pull && docker compose -f "docker-compose.release.yml" up -d"
+          cd ${{ env.PATH_TO_PROJECT }} && git checkout main && git pull && docker compose -f "docker-compose.release.yml" up -d --build"
 
       - name: Clean up
         run: rm -rf ~/.ssh
