Feature: Register - Register - Email Sender - Account Confirmation

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -1,4 +1,10 @@
 {
+  "ServerInformation": {
+    "Name": "Petopia API",
+    "Version": "v2",
+    "Description": "Petopia API",
+    "Domain": "https://localhost:5001"
+  },
   "ConnectionStrings": {
     "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;"
   },
@@ -27,5 +33,12 @@
     "Issuer": "clean-architecture",
     "Audience": "developers",
     "ExpirationInMinutes": 60
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.mailgun.org",
+    "SmtpPort": 587,
+    "SenderName": "Petopia",
+    "SenderEmail": "postmaster@ddnhuy.tech",
+    "SenderPassword": "243a7b57ef7caaa0fea4bd1d206bdb40-7113c52e-4bad7eb8"
   }
 }
