--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -1,7 +1,13 @@
 {
   "AllowedHosts": "*",
+  "ServerInformation": {
+    "Name": "Petopia API",
+    "Version": "v2",
+    "Description": "Petopia API",
+    "Domain": "https://api.ddnhuy.net/petopia"
+  },
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;"
+    "Database": "Host=postgres;Port=5432;Database=petopia_production;UserName=postgres;Password=postgres;Include Error Detail=true;"
   },
   "Serilog": {
     "Using": [
@@ -28,5 +34,12 @@
     "Issuer": "petopia",
     "Audience": "customer",
     "ExpirationInMinutes": 60
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.mailgun.org",
+    "SmtpPort": 587,
+    "SenderName": "Petopia",
+    "SenderEmail": "no-reply@ddnhuy.tech",
+    "SenderPassword": "5992edfb14c7f9fce4a4a9bf5181c86f-7113c52e-43ba77e7"
   }
 }
