Hotfix: Change production's email confirmation link

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -4,7 +4,8 @@
     "Name": "Petopia API",
     "Version": "v2",
     "Description": "Petopia API",
-    "Domain": "https://api.ddnhuy.tech/petopia"
+    "Domain": "https://ddnhuy.tech/petopia",
+    "Environment": "Production"
   },
   "ConnectionStrings": {
     "Database": "Host=postgres;Port=5432;Database=petopia_production;UserName=postgres;Password=postgres;Include Error Detail=true;"
