--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -3,7 +3,8 @@
     "Name": "Petopia API",
     "Version": "v2",
     "Description": "Petopia API",
-    "Domain": "https://localhost:5001"
+    "Domain": "https://localhost:5001",
+    "Environment": "Development"
   },
   "ConnectionStrings": {
     "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;"
