Feature: CRUD User

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -31,7 +31,7 @@
   },
   "Jwt": {
     "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
-    "Issuer": "clean-architecture",
+    "Issuer": "petopia",
     "Audience": "developers",
     "ExpirationInMinutes": 60
   },
