Sprint 1: Feature: CRUD Pet

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -19,4 +19,17 @@
 	<InternalsVisibleTo Include="Application.UnitTests" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="PetVaccinations\Create\" />
+    <Folder Include="PetVaccinations\GetById\" />
+    <Folder Include="PetVaccinations\Delete\" />
+    <Folder Include="PetVaccinations\GetByPetId\" />
+    <Folder Include="PetVaccinations\Update\" />
+    <Folder Include="PetWeights\Create\" />
+    <Folder Include="PetWeights\Delete\" />
+    <Folder Include="PetWeights\GetById\" />
+    <Folder Include="PetWeights\GetByPetId\" />
+    <Folder Include="PetWeights\Update\" />
+  </ItemGroup>
+
 </Project>
