--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -8,7 +8,7 @@
     "Environment": "Production"
   },
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=petopia_production;UserName=postgres;Password=postgres;Include Error Detail=true;"
+    "Database": "Host=postgres;Port=5432;Database=postgres;UserName=postgres;Password=postgres;Include Error Detail=true;"
   },
   "Serilog": {
     "Using": [
