--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Pipeline with Docker Compose
+﻿name: Pipeline with Docker Compose
 
 on:
   push:
@@ -16,13 +16,21 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and run Docker Compose
+      - name: Build and start Docker Compose
         run: |
-          docker compose -f docker-compose.yml build
-          docker compose -f docker-compose.yml up -d
+          docker compose -f docker-compose.yml up --build -d
+
+      - name: Wait for containers to be ready
+        run: |
+          sleep 10
 
       - name: Run tests
-        run: dotnet test ./tests/ArchitectureTests/ArchitectureTests.csproj
+        run: |
+          dotnet test ./tests/ArchitectureTests/ArchitectureTests.csproj --no-build --verbosity normal
+
+      - name: Clean up Docker containers
+        run: |
+          docker compose -f docker-compose.yml down
 
   deploy:
     runs-on: ubuntu-latest
