--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -41,5 +41,10 @@
     "SenderName": "Petopia",
     "SenderEmail": "postmaster@ddnhuy.tech",
     "SenderPassword": "dd2a26cf1ed350a1aab74ab60e2becc9-7113c52e-5db4c984"
+  },
+  "Cloudinary": {
+    "CloudName": "ddnhuy",
+    "ApiKey": "839322535595931",
+    "ApiSecret": "oA_H6jeQfc2fqU-moIRBgLmEiIE"
   }
 }
