--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -42,5 +42,10 @@
     "SenderName": "Petopia",
     "SenderEmail": "no-reply@ddnhuy.tech",
     "SenderPassword": "c5f6068055f8f0783985aea7119a004a-7113c52e-10211a97"
+  },
+  "Cloudinary": {
+    "CloudName": "ddnhuy",
+    "ApiKey": "839322535595931",
+    "ApiSecret": "oA_H6jeQfc2fqU-moIRBgLmEiIE"
   }
 }
