--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -7,7 +7,8 @@
     "Environment": "Development"
   },
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;"
+    "Database": "Host=postgres;Port=5432;Database=petopia;UserName=postgres;Password=postgres;Include Error Detail=true;",
+    "Cache": "redis:6379"
   },
   "Serilog": {
     "Using": [
