Sprint 4: Feature: Delete Advertisements

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -9,7 +9,7 @@
   },
   "ConnectionStrings": {
     "Database": "Host=postgres;Port=5432;Database=postgres;UserName=postgres;Password=postgres;Include Error Detail=true;",
-    "Cache": "redis:6379"
+    "Cache": "redis:6379,allowAdmin=true"
   },
   "Serilog": {
     "Using": [
